--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -8,7 +8,7 @@ author_profile: true
 Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please stay in touch -- I will be happy to answer future quetions, troubleshoot your meta-analysis problems, and collaborate on research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
 <center><b>Is this the State of our Science?</b></center>
-<p><img src= '/images/Implosion (2).png'></p>
+<p><img src= '/images/Stacks.jpeg'></p>
 
 ## Presentation materials
    * INSERT LINK TO POWERPOINT HERE
